apps/v7m/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: v7m-portfolio-service
  namespace: v7m
  labels:
    app: v7m-portfolio
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: v7m-portfolio
